# TPLinkArcherC1200v1

./: README.md  build.sh
IPlatform/platform/: Config.in  Makefile  feeds.conf  rules.mk
IPlatform/platform/ibase/libubox/: Makefile
IPlatform/platform/ibase/libubox/src/: blob.h  blobmsg.h  blobmsg_json.c  blobmsg_json.h
IPlatform/platform/ibase/lua/: Makefile
IPlatform/platform/ibase/luci/: Makefile
IPlatform/platform/ibase/ubus/: Makefile
IPlatform/platform/ibase/uci/: Makefile
IPlatform/platform/ibase/uci/src/: libuci.c
IPlatform/platform/ibase/uhttpd/: Makefile
IPlatform/platform/ibase/uhttpd/filesystem/: uhttpd.init
IPlatform/platform/ibase/uhttpd/src/: CMakeLists.txt  uhttpd-cgi.c  uhttpd-file.c  uhttpd-lua.c  uhttpd-ubus.c  uhttpd-utils.c  uhttpd.c  uhttpd.h
IPlatform/platform/include/: cmake.mk  kernel.mk  package-defaults.mk  package-ipkg.mk  package.mk  toplevel.mk
IPlatform/platform/package/alsa-lib/: Makefile
IPlatform/platform/package/base-files/: Makefile
IPlatform/platform/package/broadcom-wl/: Makefile
IPlatform/platform/package/cyassl_openwrt/: Makefile
IPlatform/platform/package/fdk-aac/: Makefile
IPlatform/platform/package/iptables/: Makefile
IPlatform/platform/package/swconfig/: Makefile
IPlatform/platform/scripts/: download.pl  mconfdep.pl
IPlatform/platform/scripts/config/: Makefile  dep_common.h  dep_tab.c  dep_util.c  dept_tab.c  expr.h  mconf.c  zconf.tab.c_shipped
IPlatform/platform/tools/: Makefile
IPlatform/platform/tools/mklibs/: Makefile
boards/model_brcm_bcm470x/image/c1200v1_eu/: vmlinux.trx  vmlinuz
boards/model_brcm_bcm470x/sdk/linux-2.6.36-router-9.10.178.27/main/components/apps/visualization/datacollector/: Makefile.am  Makefile.in  configure  configure.ac  makefile.arm  makefile.lin  makefile.mips  vis_common.c  vis_common.h  vis_linux_main.c  vis_linux_main.h  vis_savedata.c  vis_savedata.h  vis_socketclient.c  vis_socketclient.h  vis_wl.c  vis_wl.h  vis_wlcongestion.c  vis_wlcongestion.h  vis_wlmetrics.c  vis_wlmetrics.h  vis_xmlutility.c  vis_xmlutility.h
boards/model_brcm_bcm470x/sdk/linux-2.6.36-router-9.10.178.27/main/components/apps/visualization/dataconcentrator/: Makefile.am  Makefile.in  configure  configure.ac  database.c  database.h  vis_db_defines.h  vis_dcon_main.c  vis_dcon_main.h  vis_jsonutility.c  vis_jsonutility.h  vis_sockserver.c  vis_sockserver.h  vis_synchdb.c  vis_synchdb.h  vis_utility.c  vis_utility.h  vis_xmlutility.c  vis_xmlutility.h
(+5494 files in other folders)
